<resources>
    <!-- activity_login.xml -->
    <string name="app_name">Meowladora</string>
    <string name="brand_name">Meow\nladora</string>
    <string name="welcome_title">Seja bem vindo!</string>
    <string name="cpf_hint">Digite seu CPF</string>
    <string name="senha_hint">Digite sua senha</string>
    <string name="btn_enviar">Enviar</string>
    <string name="error_invalid_credentials">CPF ou Senha incorretos.</string>
    <string name="error_empty_fields">Preencha todos os campos.</string>
    <string name="login_approved">Login Aprovado!</string>
    <string name="desc_logo">Logo Meowladora</string>
    <string name="desc_footer_cat">Imagem de fundo decorativa</string>

    <!-- dialogo_erro.xml -->
    <string name="fechar_dialogo">Fechar</string>
    <string name="falha_login">Falha ao fazer o login</string>
    <string name="tentar_novamente">Tentar novamente</string>
    <string name="gato_descricao">Gato com fone na cadeira</string>
    <string name="erro_cpf_invalido">CPF está inválido!</string>
    <string name="erro_senha_invalida">A senha está inválida!</string>
    <string name="erro_cpf_senha_invalidos">CPF ou senha estão inválidos!</string>

    <!-- activity_calculadora.xml -->
    <string name="title_calculadora">Vamos calcular!</string>
    <string name="hint_resultado">Seu resultado aparecerá aqui!</string>
    <string name="hint_primeiro_valor">Primeiro valor</string>
    <string name="hint_segundo_valor">Segundo valor</string>
    <string name="label_compartilhar">Compartilhe aqui!</string>
    <string name="desc_compartilhar">Botão para compartilhar o resultado</string>
    <string name="op_soma">+</string>
    <string name="op_subtracao">-</string>
    <string name="op_divisao">÷</string>
    <string name="op_multiplicacao">x</string>
    <string name="op_limpar">C</string>
</resources>